<resources>
    <string name="app_name">Demo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Enter</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="search_hint">Search for businesses</string>
    <string name="action_licenses">Open Source Licenses</string>
</resources>
